// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectCostBreakdownTable expect to render 1`] = `
<Fragment>
  <Table
    aria-label="Project cost breakdown"
    borders={true}
    cells={
      Array [
        "",
        "",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right pf-m-width-30",
          },
          "title": "",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "VMware maintenance",
          "VMware support costs (during migration)",
          "$6,000",
        ],
        Array [
          Object {
            "title": <div>
               
            </div>,
          },
          Object {
            "title": <div>
               
            </div>,
          },
          Object {
            "title": <div>
               
            </div>,
          },
        ],
        Array [
          "Red Hat Virtualization costs",
          "",
          "",
        ],
        Array [
          "",
          "RHV hypervisor subscriptions",
          "$6,000",
        ],
        Array [
          "",
          "RHV hypervisor growth subscriptions",
          "$15,000",
        ],
        Array [
          "Red Hat training and services",
          "",
          "",
        ],
        Array [
          "",
          "Red Hat training",
          "$7,000",
        ],
        Array [
          "",
          "Red Hat consulting",
          "$8,000",
        ],
        Array [
          "",
          "Travel and lodging",
          "$9,000",
        ],
        Array [
          Object {
            "title": <strong>
              Total
            </strong>,
          },
          "",
          Object {
            "title": <strong>
              $51,000
            </strong>,
          },
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;

exports[`ProjectCostBreakdownTable expect to render using null and undefined data 1`] = `
<Fragment>
  <Table
    aria-label="Project cost breakdown"
    borders={true}
    cells={
      Array [
        "",
        "",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right pf-m-width-30",
          },
          "title": "",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "VMware maintenance",
          "VMware support costs (during migration)",
          "Unknown",
        ],
        Array [
          Object {
            "title": <div>
               
            </div>,
          },
          Object {
            "title": <div>
               
            </div>,
          },
          Object {
            "title": <div>
               
            </div>,
          },
        ],
        Array [
          "Red Hat Virtualization costs",
          "",
          "",
        ],
        Array [
          "",
          "RHV hypervisor subscriptions",
          "Unknown",
        ],
        Array [
          "",
          "RHV hypervisor growth subscriptions",
          "Unknown",
        ],
        Array [
          "Red Hat training and services",
          "",
          "",
        ],
        Array [
          "",
          "Red Hat training",
          "Unknown",
        ],
        Array [
          "",
          "Red Hat consulting",
          "Unknown",
        ],
        Array [
          "",
          "Travel and lodging",
          "Unknown",
        ],
        Array [
          Object {
            "title": <strong>
              Total
            </strong>,
          },
          "",
          Object {
            "title": <strong>
              Unknown
            </strong>,
          },
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;

exports[`ProjectCostBreakdownTable expect to render using values equal to 0 1`] = `
<Fragment>
  <Table
    aria-label="Project cost breakdown"
    borders={true}
    cells={
      Array [
        "",
        "",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right pf-m-width-30",
          },
          "title": "",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "VMware maintenance",
          "VMware support costs (during migration)",
          "$0",
        ],
        Array [
          Object {
            "title": <div>
               
            </div>,
          },
          Object {
            "title": <div>
               
            </div>,
          },
          Object {
            "title": <div>
               
            </div>,
          },
        ],
        Array [
          "Red Hat Virtualization costs",
          "",
          "",
        ],
        Array [
          "",
          "RHV hypervisor subscriptions",
          "$0",
        ],
        Array [
          "",
          "RHV hypervisor growth subscriptions",
          "$0",
        ],
        Array [
          "Red Hat training and services",
          "",
          "",
        ],
        Array [
          "",
          "Red Hat training",
          "$0",
        ],
        Array [
          "",
          "Red Hat consulting",
          "$0",
        ],
        Array [
          "",
          "Travel and lodging",
          "$0",
        ],
        Array [
          Object {
            "title": <strong>
              Total
            </strong>,
          },
          "",
          Object {
            "title": <strong>
              $0
            </strong>,
          },
        ],
      ]
    }
    variant="compact"
  >
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Fragment>
`;
